--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,12 +103,31 @@ services:
     depends_on:
       - ollama
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    restart: always
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_data:/qdrant/storage
+      - ./qdrant_config.yaml:/qdrant/config/config.yaml:ro
+    environment:
+      - TZ=UTC
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
 volumes:
   portainer_data:
   ollama_data:
   openwebui_data:
   langflow_data:
   n8n_data:
+  qdrant_data:
 
 networks:
   default:
